# Resume-Analyzer

./: .gitignore  .pylintrc  CI-CDexplanation.md  README.md  conftest.py  debug_action_verb.py  package-lock.json  package.json  parse_functions.py  parse_skills.py  parser.py  pylint-report.txt  pyproject.toml  pytest_full_log.txt  requirements.txt
.github/: CODEOWNERS
.github/workflows/: ci-cd.yml
backend/: .gitignore  README.md
backend/src/: main.py
docs/: sprint1_implementation_notes.md
frontend/: eslint.config.js  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/__mocks__/: styleMock.js
frontend/coverage/: clover.xml
frontend/pages/: Home.jsx  Results.jsx  Upload.jsx
frontend/src/: App.jsx  index.css
skill_lists/: soft_skills.json  technical_skills.json
src/: __init__.py  main.py  mock_data.py
src/api/: compare.py  data_service.py  results.py
src/core/: action_verbs.py  grammar_engine.py  grammar_integration.py  masking.py
src/database/: connection.py  metadata_model.py
src/feedback/: feedback_generator.py  suggestion_rules.py
src/parser/: analyzer.py  content_validator.py  experience_parser.py  gap_detector.py  jd_matcher.py  jd_parser.py  parser_integration.py  section_detector.py  skill_matcher.py  skill_parser.py  text_extractor.py
src/upload/: routes.py  service.py  validators.py
src/utils/: __init__.py  error_handler.py  errors.py  perf.py  timeit.py
templates/: functional.txt  hybrid.txt  minimalist.txt  report_template.html
tests/: helpers.py
vish_changes/: parser.py
(+61 files in other folders)
